--- a/hugo.toml
+++ b/hugo.toml
@@ -3,6 +3,43 @@ languageCode = 'en-us'
 title = 'TC Lautlingen'
 
 [build]
-  [build.postCSS]
-    includeFiles = "assets/css/*.css"
-    excludeFiles = "assets/css/ignore-*.css"
+	[build.postCSS]
+		includeFiles = "assets/css/*.css"
+		excludeFiles = "assets/css/ignore-*.css"
+
+[markup.goldmark.extensions]
+	definitionList = true
+	footnote = true
+	linkify = true
+	linkifyProtocol = "https"
+	strikethrough = true
+	table = true
+	taskList = true
+
+[markup.goldmark.extensions.typographer]
+	disable = false
+	apostrophe = "&rsquo;"
+	ellipsis = "&hellip;"
+	emDash = "&mdash;"
+	enDash = "&ndash;"
+	leftAngleQuote = "&laquo;"
+	leftDoubleQuote = "&ldquo;"
+	leftSingleQuote = "&lsquo;"
+	rightAngleQuote = "&raquo;"
+	rightDoubleQuote = "&rdquo;"
+	rightSingleQuote = "&rsquo;"
+
+[markup.goldmark.parser]
+	attribute.block = false
+	attribute.title = true
+	autoHeadingID = true
+	autoHeadingIDType = "github"
+	wrapStandAloneImageWithinParagraph = true
+
+[markup.goldmark.renderer]
+	hardWraps = true
+	unsafe = true
+	xhtml = false
+
+[params]
+ 	acrobatClientId = "f1045da4186a4c3982f9348835c9b4ea"
